# precompiled_nif_rust_centos_8_x86_64

./: .gitignore  .tool-versions  Dockerfile  README.md  mix.exs
.github/: copilot-instructions.md
.github/workflows/: release.yml
lib/: explorer.ex
native/explorer/: Cargo.toml
native/explorer/src/: lib.rs
